# cosumer_choice_metamodel

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
consumer_choice_metamodel/: __init__.py  agent.py  consumer_choice_metamodel.py  environment.py  factory.py  information.py  model.py  types.py  utils.py
examples/: example_adoption.py  example_implementation.py
